Updated Catch CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,19 @@ cmake_minimum_required(VERSION 3.13)
 cmake_policy(SET CMP0110 NEW)
 project(chip8)
 
+# CPP
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_C_STANDARD 99)
+add_compile_options(-Wall -Wextra -Wpedantic -O2)
+
+# Find packages
+find_package(Catch2 REQUIRED)
+
 # Add cmake modules path
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Modules")
 
 include(CTest)
+include(Catch)
 enable_testing()
 
 # Create main library
@@ -40,13 +49,9 @@ add_executable(unit_tests "")
 add_subdirectory(tests/src)
 
 # Load the .cmake file to make tests available to CTest
-include(ParseAndAddCatchTests)
-ParseAndAddCatchTests(unit_tests)
+catch_discover_tests(unit_tests)
 
 install(
     TARGETS unit_tests
     RUNTIME DESTINATION bin
 )
-
-# This must be last
-include(CPack)
